Changed Default Database Name

--- a/BlazorAuthenticationWeb/appsettings.json
+++ b/BlazorAuthenticationWeb/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BlazorAuthenticationWeb-9217f186-8668-423b-90e7-9fc6cb799682;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BlazerAuthDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
