Up to date push

--- a/BlazorAuthenticationWeb/appsettings.json
+++ b/BlazorAuthenticationWeb/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BlazerAuthDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BlazerAuthDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "MockConnection": "Data Source=LinuxMock.db;"
   },
   "Logging": {
     "LogLevel": {
